attempted fix for svg on ios -> xhtml

--- a/main.css
+++ b/main.css
@@ -181,6 +181,7 @@ svg .svg-text-3 {
   position: absolute;
   bottom: 1rem;
   right: 2rem;
+  border-radius: 2rem;
 }
 @media screen and (max-width: 560px) {
   .text-haiku {
@@ -190,7 +191,7 @@ svg .svg-text-3 {
   .grid {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: repeat(8, auto);
+    grid-template-rows: repeat(4, 150px 2fr);
     gap: 0rem / 0rem | 1rem;
   }
   .grid *,
